# src/shared/infra/http/routes/status.routes.ts
@@ -1,9 +1,0 @@
-import { Router } from 'express';
-import { StatusController } from '../controllers/StatusController';
-
-const statusRoutes = Router();
-const statusController = new StatusController();
-
-statusRoutes.get('/', statusController.handle);
-
-export { statusRoutes };
